--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "url": "https://github.com/kverawat/vscode-theme-w3schools-light/issues",
     "email": "kverawat@gmail.com"
   },
-  "homepage": "https://github.com/kverawat/vscode-theme-w3schools-light",
+  "homepage": "https://github.com/kverawat/vscode-theme-w3schools-light/README.md",
   "repository": {
     "type": "git",
     "url": "https://github.com/kverawat/vscode-theme-w3schools-light"
